--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -17,47 +17,36 @@
                 <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
                     <div class="user-form">
                         <div class="user-form-set">
-                            <h4>REGISTER</h4>
-                            <form  class="form-group">
-                                <div class="form-input">
+                            <h4 ng-model="RegStatus">{{RegStatus}}</h4>
+                            <form  action="/setcontacts" method="post" class="form-group" name="myForm" novalidate>
+                                <div class="form-input" ng-show="isVisible">
                                     <span class="fa fa-user form-control-feedback"></span>
-                                    <input class="form-control" type="text" ng-model="contact.userName" name="userName" placeholder="User Name">
+                                    <input class="form-control" type="text" ng-model="contact.userName" name="userName" placeholder="User Name" required>
+                                     <span style="color:red" ng-show="myForm.userName.$dirty && myForm.userName.$invalid">
+                                            <span ng-show="myForm.userName.$error.required">Username is required.</span>
+                                    </span>
                                 </div>
-                               <!-- <div class="form-input">
-                                    <span class="fa fa-unlock-alt form-control-feedback"></span>
-                                    <input class="form-control" type="password"  name="password" placeholder="Password">
-                                </div>-->
-                                <div class="form-input">
+                               <div class="form-input" ng-show="isVisible">
                                     <span class="fa fa-user form-control-feedback"></span>
-                                    <input class="form-control" type="text" ng-model="contact.userEmail" name="name" placeholder="User Email">
+                                    <input class="form-control" type="email" ng-model="contact.userEmail" name="userEmail" placeholder="User Email" required>
+                                    <span style="color:red" ng-show="myForm.userEmail.$dirty && myForm.userEmail.$invalid">
+                                        <span ng-show="myForm.userEmail.$error.required">Email is required.</span>
+                                        <span ng-show="myForm.userEmail.$error.userEmail">Invalid email address.</span>
+                                        
+                                    </span>
                                 </div>
-                                <div class="form-input">
+                                <div class="form-input" ng-show="isVisible">
                                     <span class="fa fa-unlock-alt form-control-feedback"></span>
                                     <input class="form-control" type="password" ng-model="contact.userPassword" name="userPassword" placeholder="Password">
+                                    
                                 </div>
+                                
                                 <div class="form-input">
-                                    <input type="checkbox">
-                                    <label>Remember me</label>
-                                </div>
-                                <div class="form-input">
-                                    <input type="submit" name="register" value="Register Now" ng-click="addContact()">
+                                    <input type="submit" name="register" ng-show="isVisible" value="Register Now" ng-click="addContact()"  ng-disabled="myForm.userName.$dirty && myForm.userName.$invalid ||
+  myForm.userEmail.$dirty && myForm.userEmail.$invalid">
                                 </div>
                             </form>
-                            <!--<div class="social-login">
-                                <h4>LOGIN VIA SOCIAL ACCOUNT</h4>
-                                <div class="social-accounts">
-                                    <a href="#">
-                                        <i class="fa fa-facebook"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fa fa-twitter"></i>
-                                    </a>
-                                    <a href="#">
-                                        <i class="fa fa-google-plus"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <p>Login with Social</p>-->
+                            
                         </div>
                     </div>
                 </div>
