--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,5 +1,5 @@
 <% include header.ejs %>
-
+<div ng-controller="loginCtrl">
  <!--main sub page heading-->
     <section id="page-head">
         <div class="container">
@@ -21,18 +21,18 @@
                             <form method="post" class="form-group">
                                 <div class="form-input">
                                     <span class="fa fa-user form-control-feedback"></span>
-                                    <input class="form-control" type="text" name="name" placeholder="User Name or Email">
+                                    <input class="form-control" type="email" ng-model="contact.userName" name="userName" placeholder="Enter Email">
                                 </div>
                                 <div class="form-input">
                                     <span class="fa fa-unlock-alt form-control-feedback"></span>
-                                    <input class="form-control" type="password" name="password" placeholder="Password">
+                                    <input class="form-control" type="password" g-model="contact.userPassword" name="userPassword" placeholder="Password">
                                 </div>
                                 <div class="form-input">
                                     <input type="checkbox">
                                     <label>Remember me</label>
                                 </div>
                                 <div class="form-input">
-                                    <input type="submit" name="login" value="login">
+                                    <input type="submit" name="login" value="login" ng-click="loginUser()">
                                 </div>
                                 <div class="form-input">
                                     <p><a href="#">Forgot Password?</a></p>
@@ -59,5 +59,6 @@
             </div>
         </div>
     </section>
-    
+ </div>   
 <% include footer.ejs %>
+<script src="controllers/login.js"></script>
